--- a/sass/includes/basic.scss
+++ b/sass/includes/basic.scss
@@ -95,6 +95,7 @@ main {
 
     svg {
       width: 9px;
+      height: 9px;
       margin-right: 5px;
     }
   }
@@ -106,14 +107,6 @@ main {
     left: 100px;
     top: 100px;
     transform: translate(-50%, -50%);
-
-    circle {
-      fill: #1f1f1fd0;
-    }
-
-    path {
-      fill: white;
-    }
   }
 }
 
