--- a/sass/includes/basic.scss
+++ b/sass/includes/basic.scss
@@ -196,3 +196,20 @@ img.logo {
     font-size: 14px;
   }
 }
+
+.scroll {
+  list-style: none;
+  padding: 0px;
+  text-align: center;
+
+  h2,
+  p {
+    margin: 0px;
+  }
+  li {
+    border: solid #303030;
+    border-radius: 16px;
+    margin: 16px 0px;
+    padding: 10px;
+  }
+}
