add comment replies

--- a/sass/includes/basic.scss
+++ b/sass/includes/basic.scss
@@ -220,6 +220,7 @@ img.logo {
   font-size: 14px;
   li {
     display: flex;
+    margin: 8px 0;
     div.pfp {
       margin: 0 8px 0px 0px;
     }
@@ -227,11 +228,12 @@ img.logo {
       margin: 0;
     }
     .content {
-      margin: 8px 0;
+      margin: 4px 0;
       white-space: pre-wrap;
     }
     .date {
       margin: 0;
+      color: grey;
     }
   }
 }
