--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,8 @@
 @use "includes/basic";
+@use "includes/artwork";
+@use "includes/author";
+@use "includes/comments";
+@use "includes/scroll";
+@use "includes/search";
+@use "includes/ranking";
+@use "includes/spinner";
