--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,5 +4,6 @@
 @use "includes/comments";
 @use "includes/scroll";
 @use "includes/search";
+@use "includes/form";
 @use "includes/ranking";
 @use "includes/spinner";
