--- a/sass/includes/author.scss
+++ b/sass/includes/author.scss
@@ -10,3 +10,12 @@
         margin: 0px 10px 10px 0px;
     }
 }
+
+.category {
+    display: flex;
+
+    a,
+    div {
+        margin: auto;
+    }
+}
